[package]
name = "imgshow"
version = "0.1.0"
authors = ["Barend <11941174+bvanrijn@users.noreply.github.com>"]
edition = "2018"
description = "An image viewer for iTerm2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.11.0"
clap = "2.33.0"
reqwest = "0.9.24"

